--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.11.4",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.4.0",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-sharp": "^5.4.0",
     "gatsby-plugin-styled-components": "^6.4.0",
